# music-player

./: .gitignore  MusicPlayer.spec  README.md  README_file_compare.md  check_douyin_videos.py  compile.bat  compile.ps1  debug_position_db.py  ffmpeg_test.py  file_compare_app.py  fix_indentation.py  process_icon.py  pyproject.toml  register_protocol.ps1  resize_icons.py  run.py  run_file_compare.py  test_settings.py  test_subtitle_fix.py  test_vlc_methods.py  testapp.py  video_diagnostic_tool.py  vlc_test.py  vlc_test_ab.py  web_form_server.py
MusicPlayerDocs/: Auto-Save Implementation.md  BaseTable Documentation.md  Clipping Functionalities.md  Clipping Implementation Summary.md  Douyin Implementation.md  Download Options Refactoring.md  Groq Music Model Implementation.md  Hotkeys.md  Implementing Full Screen Video.md  Media Conversion Implementation.md  Merge Fix.md  Music Player Code Architecture.md  New Hotkey Implementation.md  OPlayer Implementation.md  Old_main_player.py  Play Video Implementation Plan.md  PlaylistsPage Documentation.md  SampleOutput.txt  ToDo.md  Vid Proc.pptx  Video Compression Functionality.md  Youtube Chrome Extension Documentation.md  Youtube Master.md  Youtube-Master Migration.md  Yt-dlp Update.md  aiprompts.json  qt_base_app Documentation.md  vid_processing_page spec_v_0.md
ffmpeg_logs/: ffmpeg_test_log.txt
music_player/: __init__.py  main.py
musicplayerdl-audio/: README.md  background.js  content.js  manifest.json  setup.bat
musicplayerdl-best/: README.md  background.js  content.js  manifest.json  setup.bat
qt_base_app/: app.py  (+1 more)
(+140 files in other folders)
